[package]
name = "n"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shellexpand = "3.1.1"
tempfile = "3.21.0"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
